--- a/thinkive-base/pom.xml
+++ b/thinkive-base/pom.xml
@@ -21,5 +21,26 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+    	<groupId>log4j</groupId>
+    	<artifactId>log4j</artifactId>
+    	<version>1.2.14</version>
+    	<scope>compile</scope>
+    </dependency>
+    
+    <dependency>
+    	<groupId>dom4j</groupId>
+    	<artifactId>dom4j</artifactId>
+    	<version>1.6.1</version>
+    	<scope>compile</scope>
+    </dependency>
+    
+    <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>1.4</version>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
